# enterprise-datalens

./: .env.example  .gitignore  .mailmap  LICENSE  Makefile  README.md  agent_graph.py  agent_service.py  agent_tools.py  app.py  build_lakehouse.py  datalens_engine.py  generate_data.py  gx_config.py  metadata.yaml  pyproject.toml  requirements.txt  run_agent.py  seed_chroma.py  seed_db.py  semantic_indexer.py  test_app.py  test_pipeline.py
.github/workflows/: ci.yml
gx/: great_expectations.yml
gx/expectations/: .ge_store_backend_id  banking_quality_suite.json
src/datalens/: __init__.py
